Fix spacing

--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ img#starling {
   aspect-ratio: 4 / 3;
   margin-left: auto;
   margin-right: auto;
+  display: block;
+  border-radius: 4px;
 }
 
 .about p {
@@ -82,6 +84,12 @@ img#starling {
   font-size: 20px;
   line-height: 30px;
   padding-right: 20px;
+}
+
+.about ul {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .text a {
